Initial work on map

--- a/iot-serverless-ui/src/main/webapp/index.html
+++ b/iot-serverless-ui/src/main/webapp/index.html
@@ -1342,8 +1342,8 @@
         <p class="card-pf-utilization-details">
           <span class="card-pf-utilization-card-details-count">Coordinates</span>
             <span class="card-pf-utilization-card-details-description">
-              <span class="card-pf-utilization-card-details-line-1">Latitude:</span>
-              <span class="card-pf-utilization-card-details-line-2">Longitude</span>
+              <span class="card-pf-utilization-card-details-line-1 asset-location-latitude"></span>
+              <span class="card-pf-utilization-card-details-line-2 asset-location-longitude"></span>
             </span>
         </p>
 
@@ -1351,7 +1351,7 @@
       <div class="col-xs-12 col-sm-4 col-md-4">
         <h3 class="card-pf-subtitle">Geofence</h3>
         <p class="card-pf-utilization-details">
-          <span class="card-pf-utilization-card-details-count">Within Fence: Yes</span>
+          <span class="card-pf-utilization-card-details-count asset-within-fence"></span>
 
         </p>
 
