stub for index file and populating image/folders (#4)
* Stub for asset info

* missing fonts

* removed test.css

* removed reference to images folder

* added asset images

* Delete Blowdown-Controller.jpg

* Delete Blowdown-Valve.jpg

* Delete Chemical-Pump.jpg

* Delete Condensate-Pump.jpg

* Delete DIN-Rail.jpg

* Delete Lighting-Control.JPG

* Delete Robotic-Arm.jpg

* Delete Teledyne-Dalsa.jpg

* Delete blank

--- a/iot-serverless-ui/src/main/webapp/index.html
+++ b/iot-serverless-ui/src/main/webapp/index.html
@@ -25,7 +25,7 @@
     <link rel="apple-touch-icon-precomposed" sizes="57x57" href="img/apple-touch-icon-precomposed-57.png">
     <link rel="stylesheet" href="css/patternfly.min.css" >
     <link rel="stylesheet" href="css/patternfly-additions.min.css" >
-      <link href="tests.css" rel="stylesheet" media="screen, print">
+    
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.matchHeight/0.7.2/jquery.matchHeight-min.js"></script>
@@ -1359,9 +1359,12 @@
       <div class="col-xs-12 col-sm-4 col-md-4">
         <h3 class="card-pf-subtitle">Asset Information</h3>
         <p class="card-pf-utilization-details">
+         <span class="card-pf-utilization-card-details-line-1 asset-name"></span>
+          <span class="card-pf-utilization-card-details-line-2 asset-location"></span>
+          <span class="card-pf-utilization-card-details-line-2 asset-last-move-time"></span>
           <span class="card-pf-utilization-card-details-count">Asset Picture
 
-<img class="navbar-brand-icon" src="imgages/Chemical-Pump.jpg"/>
+          <img class="navbar-brand-icon" src="img/Chemical-Pump.jpg"/>
 
           </span>
 
