Added UI logic for name, location and picture (#11)

--- a/iot-serverless-ui/src/main/resources/static/index.html
+++ b/iot-serverless-ui/src/main/resources/static/index.html
@@ -1362,11 +1362,8 @@
          <span class="card-pf-utilization-card-details-line-1 asset-name"></span>
           <span class="card-pf-utilization-card-details-line-2 asset-location"></span>
           <span class="card-pf-utilization-card-details-line-2 asset-last-move-time"></span>
-          <span class="card-pf-utilization-card-details-count">Asset Picture
-
-          <img class="navbar-brand-icon" src="img/Chemical-Pump.jpg"/>
-
-          </span>
+          <span class="card-pf-utilization-card-details-count"></span>
+          <div class="navbar-brand-icon asset-image"/>
 
         </p>
 
