formatting index, adding bigDecimal and update coordinates (#15)
* fixed BigDecimal and other changes

* Changed to bigDecimal and other changes

--- a/iot-serverless-ui/src/main/resources/static/index.html
+++ b/iot-serverless-ui/src/main/resources/static/index.html
@@ -25,7 +25,7 @@
     <link rel="apple-touch-icon-precomposed" sizes="57x57" href="img/apple-touch-icon-precomposed-57.png">
     <link rel="stylesheet" href="css/patternfly.min.css" >
     <link rel="stylesheet" href="css/patternfly-additions.min.css" >
-    
+
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.matchHeight/0.7.2/jquery.matchHeight-min.js"></script>
@@ -1257,7 +1257,7 @@
 
       var citymap = {
         chemicalpump: {
-          center: {lat:  37.784172, lng: -122.401858},
+          center: {lat:  37.784202, lng: -122.401858},
           fence: 3
         },
         blowdownvalve: {
@@ -1269,7 +1269,7 @@
           fence: 1
         },
         condensatepump: {
-          center: {lat: 37.784269, lng: -122.401322},
+          center: {lat: 37.784269, lng: -122.401302},
           fence: 3
         },
         roboticarm: {
@@ -1282,7 +1282,7 @@
         },
         lightingcontrol: {
           center: {lat: 37.784335, lng: -122.401159},
-          fence: 3
+          fence: 4
         },
         dinpowersupply: {
           center: {lat: 37.784393, lng: -122.401399},
@@ -1331,9 +1331,9 @@
 <div class="card-pf card-pf-utilization">
   <div class="card-pf-heading">
     <p class="card-pf-heading-details"></p>
-    <h2 class="card-pf-title">
+    <h1 class="card-pf-title"><b>
       Asset Status
-    </h2>
+  </b>    </h1>
   </div>
   <div class="card-pf-body">
     <div class="row">
