added initial delay intervals (#17)

--- a/iot-serverless-ui/src/main/resources/static/index.html
+++ b/iot-serverless-ui/src/main/resources/static/index.html
@@ -50,7 +50,7 @@
     </button>
     <a href="/" class="navbar-brand">
 
-<h2>Container Factory Asset Tracker</h2>
+<h4><b>Container Factory Asset Tracker</b></h2>
 <!-- <img class="navbar-brand-icon" src="..//img/logo-alt.svg" alt=""/><img class="navbar-brand-name" src="" alt="Container Factory Asset Tracker" />
 </a> -->
 
@@ -1340,7 +1340,7 @@
       <div class="col-xs-12 col-sm-4 col-md-4">
         <h3 class="card-pf-subtitle">Current Location</h3>
         <p class="card-pf-utilization-details">
-          <span class="card-pf-utilization-card-details-count">Coordinates</span>
+
             <span class="card-pf-utilization-card-details-description">
               <span class="card-pf-utilization-card-details-line-1 asset-location-latitude"></span>
               <span class="card-pf-utilization-card-details-line-2 asset-location-longitude"></span>
