--- a/lab_3.html
+++ b/lab_3.html
@@ -479,8 +479,17 @@ $ cd /home/lab-user/iot-serverless/workspace</code></pre>
 ok: updated action hello_openwhisk</code></pre>
 </div>
 </div>
-<div class="paragraph">
-<p>Note: The update subcommand of action performs an upsert. If an action does not exist, one will be created. If an action does exist, it will be updated.</p>
+<div class="admonitionblock note">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-note" title="Note"></i>
+</td>
+<td class="content">
+The update subcommand of action performs an upsert. If an action does not exist, one will be created. If an action does exist, it will be updated.
+</td>
+</tr>
+</table>
 </div>
 <div class="paragraph">
 <p>Finally, invoke the action using the following command:</p>
@@ -1009,7 +1018,7 @@ In addition, there is a field called <em>logs</em> containing two values. Those 
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2018-05-06 21:53:23 MST
+Last updated 2018-05-07 23:04:50 PDT
 </div>
 </div>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.min.css">
