--- a/advance_lab.html
+++ b/advance_lab.html
@@ -462,7 +462,7 @@ The GUI design uses the sample code from <a href="http://www.patternfly.org/patt
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2018-05-06 21:53:23 MST
+Last updated 2018-05-07 23:04:44 PDT
 </div>
 </div>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.min.css">
