--- a/conclusion.html
+++ b/conclusion.html
@@ -492,7 +492,7 @@ Working through the various exercises in this lab, you learned about how to:</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2018-05-06 21:53:23 MST
+Last updated 2018-05-07 23:04:44 PDT
 </div>
 </div>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.min.css">
