--- a/lab_5.html
+++ b/lab_5.html
@@ -525,7 +525,7 @@ broker-drainer-1-z2wf5   1/1       Running   0          3m</code></pre>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2018-05-06 21:53:23 MST
+Last updated 2018-05-07 23:04:44 PDT
 </div>
 </div>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.min.css">
