--- a/lab_7.html
+++ b/lab_7.html
@@ -565,7 +565,7 @@ software-sensor-1-jg74d   1/1       Running   0          1m</code></pre>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2018-05-06 21:53:23 MST
+Last updated 2018-05-07 23:04:44 PDT
 </div>
 </div>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.min.css">
