--- a/index.html
+++ b/index.html
@@ -471,16 +471,16 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="ulist">
 <ul>
 <li>
-<p><a href="file:lab_3.html#_actions"><strong>Actions</strong></a></p>
+<p><a href="lab_3.html#_actions"><strong>Actions</strong></a></p>
 </li>
 <li>
-<p><a href="file:lab_3.html#_organizing_resources_as_packages"><strong>Packages</strong></a></p>
+<p><a href="lab_3.html#_organizing_resources_as_packages"><strong>Packages</strong></a></p>
 </li>
 <li>
-<p><a href="file:lab_3.html#_introduction_to_triggers"><strong>Triggers</strong></a></p>
+<p><a href="lab_3.html#_introduction_to_triggers"><strong>Triggers</strong></a></p>
 </li>
 <li>
-<p><a href="file:lab_3.html#_connecting_triggers_to_actions_using_rules"><strong>Rules</strong></a></p>
+<p><a href="lab_3.html#_connecting_triggers_to_actions_using_rules"><strong>Rules</strong></a></p>
 </li>
 <li>
 <p><a href="lab_3.html#_creating_a_sequence_of_actions"><strong>Sequences</strong></a></p>
